--- a/README
+++ b/README
@@ -36,7 +36,7 @@ SYNOPSIS
     original, scale it small enough to fit 200x100 px size, fill extra
     borders (top/down or left/right, depending on the original image aspect
     ratio) with cyan background, and convert to PNG format. Also clipping is
-    available, see below.
+    available, see "CONFIGURATION".
 
         ## example3.psgi
 
@@ -78,10 +78,71 @@ DESCRIPTION
     Plack::Middleware::Static, or Catalyst::Plugin::Static::Simple for
     example.
 
-    See below for various size/format specifications that can be used in the
-    request URI, and "ATTRIBUTES" for common configuration options that you
-    can give as named parameters to the "enable".
+    See "CONFIGURATION" for various size/format specifications that can be
+    used in the request URI, and "ATTRIBUTES" for common configuration
+    options that you can give as named parameters to the "enable".
 
+ATTRIBUTES
+  match
+    Only matching URIs are processed with this module. The match is done
+    against PATH_INFO. Non-matching requests are delegated to the next
+    middleware layer or application.
+
+    Must be a RegexpRef, or CodeRef, that may return 3 values (regexp
+    captures or normal return values). The request path is passed to the
+    CodeRef in $_, and can be rewritten during match. This is used to strip
+    off the image parameters from the URI. Rewritten URI is used for
+    fetching the original image. Empty array means no match.
+
+    First and second captures are the desired width and height of the
+    resulting image. Third capture is an optional flag string. See
+    "CONFIGURATION".
+
+  orig_ext
+    ArrayRef of possible original image formats. See "fetch_orig".
+
+  memory_limit
+    Memory limit for the image scaling in bytes, as defined in Image::Scale.
+
+  jpeg_quality
+    JPEG quality, as defined in Image::Scale.
+
+  width
+    Use this to set and override image width.
+
+  height
+    Use this to set and override image height.
+
+  flags
+    Use this to set and override image processing flags.
+
+METHODS
+  fetch_orig
+    Call parameters: PSGI request HashRef $env, Str $basename. Return value:
+    PSGI response ArrayRef $res.
+
+    The original image is fetched from the next layer or application. All
+    possible extensions defined in "orig_ext" are tried in order, to search
+    for the original image. All other responses except a straight 404 (as
+    returned by Plack::Middleware::Static for example) are considered
+    matches.
+
+  body_scaler
+    Call parameters: @args. Return value: CodeRef $cb.
+
+    Create the content filter callback and return a CodeRef to it. The
+    filter will buffer the data and call "image_scale" with parameters @args
+    when EOF is received, and finally return the converted data.
+
+  image_scale
+    Call parameters: ScalarRef $buffer, String $ct, Int $width, Int $height,
+    HashRef|Str $flags. Return value: $imagedata
+
+    Read image from $buffer, scale it to $width x $height and return as
+    content-type $ct. Optional $flags to specify image processing options
+    like background fills or cropping. $flags can be a HashRef or
+
+CONFIGURATION
     The default match pattern for URI is
     "*...**basename*_*width*x*height*-*flags*.*ext*".
 
@@ -114,8 +175,6 @@ DESCRIPTION
     If fill has a value, it specifies the background color to use. Undefined
     color with png output means transparent background.
 
-        /images/foo_40x20-fill0xff0000.png  ## red background
-
   flags: crop
     Image aspect ratio is preserved by scaling and cropping from middle of
     the image. This means scaling to the bigger of the two possible sizes
@@ -128,78 +187,6 @@ DESCRIPTION
     the specified pixel width, height or both.
 
         /images/foo_40x-crop-z20.png
-
-ATTRIBUTES
-  match
-    Only matching URIs are processed with this module. The match is done
-    against PATH_INFO. Non-matching requests are delegated to the next
-    middleware layer or application.
-
-    Must be a RegexpRef, or CodeRef, that may return 3 values (regexp
-    captures or normal return values). The request path is passed to the
-    CodeRef in $_, and can be rewritten during match. This is used to strip
-    off the image parameters from the URI. Rewritten URI is used for
-    fetching the original image.
-
-    First and second captures are the desired width and height of the
-    resulting image. Third capture is an optional flag string. See
-    "DESCRIPTION".
-
-  orig_ext
-    ArrayRef of possible original image formats. See "fetch_orig".
-
-  memory_limit
-    Memory limit for the image scaling in bytes, as defined in Image::Scale.
-
-  jpeg_quality
-    JPEG quality, as defined in Image::Scale.
-
-  width
-    Use this to set and override image width.
-
-  height
-    Use this to set and override image height.
-
-  flags
-    Use this to set and override image processing flags.
-
-METHODS
-  call
-    Process the request. The original image is fetched from the backend if
-    "path" match as specified. Normally you should use
-    Plack::Middleware::Static or similar backend, that returns a filehandle
-    or otherwise delayed body. Content-Type of the response is set according
-    the request.
-
-    The body of the response is replaced with a streaming body that
-    implements a content filter to do the actual resizing for the original
-    body. This means that if response body gets discarded due to header
-    validation (If-Modified-Since or If-None-Match for example), the body
-    never needs to be processed.
-
-    However, if the original image has been modified, for example the
-    modification date has been changed, the streaming body gets passed to
-    the HTTP server (or another middleware layer that needs to read it in),
-    and the conversion happens.
-
-  fetch_orig
-    The original image is fetched from the next layer or application. All
-    possible extensions defined in "orig_ext" are used in order, to search
-    for the original image. All other responses except a straight 404 (as
-    returned by Plack::Middleware::Static for example) are considered
-    matches.
-
-  body_scaler
-    Create a content filter callback to do the conversion with specified
-    arguments. The callback binds to a closure with a buffer and the
-    image_scale arguments. The callback will buffer the response and call
-    "image_scale" after an EOF.
-
-  image_scale
-    Do the actual scaling and cropping of the image. Arguments are width,
-    height and flags, as parsed in "call".
-
-    See "DESCRIPTION" for description of various sizes and flags.
 
 CAVEATS
     The cropping requires Imager. This is a run-time dependency, and
