Add example for parsing with Config::General.

--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Changelog for Plack::Middleware::Image::Scale
 
 {{$NEXT}}
 
-    * Add example for using CodeRef for path parameter.
+    * Add examples for using a CodeRef for path parameter.
 
 0.004     2011-04-04 00:51:31 Europe/Helsinki
 
