--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Changelog for Plack::Middleware::Image::Scale
 
 {{$NEXT}}
 
+    * Size matching can read HashRef of HashRefs for easy
+      Config::General style configuration data support.
+
 0.005     2011-04-04 17:37:41 Europe/Helsinki
 
     * Add examples for using a CodeRef for path parameter.
