--- a/README
+++ b/README
@@ -68,19 +68,8 @@ SYNOPSIS
             fill    ff0000
         </thumbred>
 
-    But you might want to use a simple config format if writing it in-line.
-
-        ## see example3.psgi
-
-        my $imagesize = {
-            small   => [ 40,100],
-            medium  => [140,200],
-            big     => [240,300],
-        };
-
-        # ...
-
-        enable 'Image::Scale', size => $imagesize;
+    For more examples, browse into directory <eg> inside the distribution
+    directory for this version.
 
 DESCRIPTION
     Scale and convert images to the requested format on the fly. By default
